--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -30,7 +30,7 @@
                 </button>
                 <button routerLink="/create-org" mat-menu-item>
                     <mat-icon>business</mat-icon>
-                    <span>Register an Organization</span>
+                    <span>Create an Organization</span>
                 </button>
                 <button routerLink="/logout" mat-menu-item>
                     <mat-icon>logout</mat-icon>
