--- a/src/app/create-event/create-event.component.html
+++ b/src/app/create-event/create-event.component.html
@@ -1,29 +1,30 @@
-<h1>Create Event</h1>
-<div>
-    <form
-    [formGroup]="signupForm"
-    (ngSubmit)="submit()">
-        
-        <div class = "form-control">
-            <label for="name">Name of Event</label>
-            <input type="text" class = "form-group" id="name" name="eventname" placeholder="Event Name" required formControlName="name">
-        </div>
-        
-        <div class = "form-control">
-            <label for="date">Date</label>
-            <input type="text" class = "form-group" id="date" name="eventdate" placeholder="mm/dd/yyyy" required formControlName="date">
-        </div>
-        
-        <div class = "form-group">
-          <label for="location">Address</label> 
-          <input type="text" id="location" required formControlName="location">
-        </div>
-        
-        <div class = "form-group">
-          <label for="description">Event Description </label> 
-          <textarea rows="4" cols="50" name="comment" form="usrform" formControlName="description"></textarea> 
-      </div>
-    
-        <input type="submit" value="Create Event">
-    </form>
+<div class="container" style="width:50%">
+    <mat-card> 
+    <mat-card-title>Create an Event</mat-card-title>
+    <mat-divider></mat-divider>
+    <div class="create-event-container">
+        <mat-form-field>
+            <input readonly matInput placeholder="Organization" value="{{ orgName }}">
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Event Name</mat-label>
+            <input [formControl]="eventNameFormControl" required matInput placeholder="Your event name">
+            <mat-error *ngIf="eventNameFormControl.hasError('required')">
+                Please enter a name for the event
+            </mat-error>
+        </mat-form-field>
+        <mat-form-field>
+            <mat-label>Event Description</mat-label>
+            <textarea [formControl]="descriptionFormControl" required matInput placeholder="A brief description about your event..."></textarea>
+            <mat-error *ngIf="descriptionFormControl.hasError('required')">
+                Please enter a description for the event
+            </mat-error>
+        </mat-form-field>
+    </div>
+    <div class="muted-text">* indicates required fields</div>
+    <mat-divider></mat-divider>
+    <div class="footer-content">
+        <button (click)="submit()" mat-raised-button color="accent">Create Event</button>
+    </div>
+    </mat-card>
 </div>
