--- a/src/app/user-profile/user-profile.component.css
+++ b/src/app/user-profile/user-profile.component.css
@@ -5,6 +5,15 @@
   padding-bottom:10px;
 }
 
+.avatar {
+  /*background-image: url('../default-pic.jpg');*/
+  background-size: cover;
+  width: 75px;
+  height: 75px;
+  margin-right: 15px;
+  border-radius: 50%;
+}
+
 /*
 div.events {
     white-space: pre-wrap;
