event page Gmap fixed

--- a/src/app/view-event/view-event.component.html
+++ b/src/app/view-event/view-event.component.html
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-6">
       <mat-card>
-        <agm-map [latitude]="lat" [longitude]="lng" [zoom] = "zoom">
+        <agm-map [latitude]="ulat" [longitude]="ulng" [zoom] = "zoom">
           <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
         </agm-map>
       </mat-card>
