--- a/src/app/org-form/org-form.component.html
+++ b/src/app/org-form/org-form.component.html
@@ -32,7 +32,7 @@
       </div>
       -->
       <br>
-      <button type="submit" mat-raised-button color= primary>Create Organization</button>
+      <button type="submit" mat-raised-button color= accent>Create Organization</button>
     </mat-card>
   </form>
 </div>
