--- a/src/app/user-login-form/user-login-form.component.html
+++ b/src/app/user-login-form/user-login-form.component.html
@@ -18,7 +18,7 @@
           Password is required
         </div> -->
       <br>
-      <button  type="submit" [disabled]="!loginForm.valid" mat-raised-button color= primary>Log In</button>
+      <button  type="submit" [disabled]="!loginForm.valid" mat-raised-button color= accent>Log In</button>
     </form>
   </mat-card>
 </div>
