--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,8 @@
+.home-container {
+  display: block; margin-left: auto; margin-right: auto;
+  width:80%;
+}
+
 .searchBar input[type=text] {
     width: 70%; 
     padding: 20px;
